--- a/src/content/docs/guides/1-getting-started.mdx
+++ b/src/content/docs/guides/1-getting-started.mdx
@@ -12,7 +12,7 @@ Shoukaku is a stable, powerful and updated wrapper around [Lavalink](https://lav
 <Steps>
 1. Install Shoukaku using your favorite package manager.
 
-    <PackageManagers type="add" pkg="shoukaku@4.0.0" pkgManagers={["npm", "yarn", "pnpm", "bun"]} />
+    <PackageManagers type="add" pkg="shipgirlproject/Shoukaku#master" pkgManagers={["npm", "yarn", "pnpm", "bun"]} />
 
 2. Initialize the library using one of the connectors.
     
