chore: update plugins

--- a/src/content/docs/guides/4-plugins.mdx
+++ b/src/content/docs/guides/4-plugins.mdx
@@ -8,10 +8,9 @@ import { Aside } from '@astrojs/starlight/components';
 ## Plugins List
 Open a pull request to add your plugin here
 
-| Name         | Link                                              | Description                                                                                                                              |
-| ------------ | ------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
-| Kazagumo     | [Github](https://github.com/Takiyo0/Kazagumo)     | A Shoukaku wrapper that have built-in queue system                                                                                       |
-| stone-deezer | [NPM](https://www.npmjs.com/package/stone-deezer) | A plugin to simplify deezer links and then play it from available sources (**REQUIRES [KAZAGUMO](https://github.com/Takiyo0/Kazagumo)**) |
+| Name         | Link                                              | Description                                              |
+| ------------ | ------------------------------------------------- | -------------------------------------------------------- |
+| Kazagumo     | [Github](https://github.com/Takiyo0/Kazagumo)     | A wrapper for Shoukaku that has an internal queue system |
 
 ## Creating Plugins
 <Aside type="note" title="Under Construction">
