--- a/src/content/docs/4.0.1/guides/1-getting-started.mdx
+++ b/src/content/docs/4.0.1/guides/1-getting-started.mdx
@@ -10,86 +10,102 @@ import { Tabs, TabItem, Steps, Aside } from '@astrojs/starlight/components';
 Shoukaku is a stable, powerful and updated wrapper around [Lavalink](https://lavalink.dev/). It is Discord library agnostic, and can add support for new Discord libraries using connectors.
 
 ## Set up Shoukaku
-
 <Steps>
-  1. Install Shoukaku using your favorite package manager.
+1. Install Shoukaku using your favorite package manager.
 
-     <PackageManagers type="add" pkg="shoukaku@4.0.1" pkgManagers={["npm", "yarn", "pnpm", "bun"]} />
+    <PackageManagers type="add" pkg="shoukaku@4.0.1" pkgManagers={["npm", "yarn", "pnpm", "bun"]} />
 
-  2. Initialize the library using one of the connectors.
+2. Import the library
 
-     <Tabs>
-       <TabItem label="Discord.JS">
-         ```js
-         const { Client } = require('discord.js');
-         const { Shoukaku, Connectors } = require('shoukaku');
-         const Nodes = [{
-             name: 'Localhost',
-             url: 'localhost:6969',
-             auth: 'marin_kitagawa'
-         }];
-         const client = new Client();
-         const shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
-         // ALWAYS handle error, logging it will do
-         shoukaku.on('error', (_, error) => console.error(error));
-         client.login('token');
-         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
-         client.shoukaku = shoukaku;
-         ```
-       </TabItem>
+    <Tabs>
+        <TabItem label="ESM">
+            ```js
+            import { Client } from "discord.js";
+            import { Shoukaku, Connectors } from "shoukaku";
+            ```
+        </TabItem>
+        <TabItem label="CJS">
+            ```js
+            const { Client } = require("discord.js");
+            const { Shoukaku, Connectors } = require("shoukaku");
+            ```
+        </TabItem>
+    </Tabs>
 
-       <TabItem label="Eris">
-         ```js
-         const { Client } = require('discord.js');
-         const { Shoukaku, Connectors } = require('shoukaku');
-         const Nodes = [{
-             name: 'Localhost',
-             url: 'localhost:6969',
-             auth: 'marin_kitagawa'
-         }];
-         const client = new Client();
-         const shoukaku = new Shoukaku(new Connectors.Eris(client), Nodes);
-         // ALWAYS handle error, logging it will do
-         shoukaku.on('error', (_, error) => console.error(error));
-         client.login('token');
-         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
-         client.shoukaku = shoukaku;
-         ```
-       </TabItem>
+3. Configure nodes
 
-       <TabItem label="Oceanic.JS">
-         ```js
-         const { Client } = require('discord.js');
-         const { Shoukaku, Connectors } = require('shoukaku');
-         const Nodes = [{
-             name: 'Localhost',
-             url: 'localhost:6969',
-             auth: 'marin_kitagawa'
-         }];
-         const client = new Client();
-         const shoukaku = new Shoukaku(new Connectors.OceanicJS(client), Nodes);
-         // ALWAYS handle error, logging it will do
-         shoukaku.on('error', (_, error) => console.error(error));
-         client.login('token');
-         // If you want shoukaku to be available on client, then bind it to it, here is one example of it
-         client.shoukaku = shoukaku;
-         ```
-       </TabItem>
-     </Tabs>
+    ```js
+    const Nodes = [
+        {
+            name: "Localhost",
+            url: "localhost:6969",
+            auth: "re_aoharu", // password
+        },
+    ];
+    ```
 
-     <Aside type="danger" title="Do not ever do this!">
-       Shoukaku will never initialized if you don't start her before you call `client.login()`
+4. Initialize the library using one of the connectors.
+    
+    <Tabs>
+        <TabItem label="Discord.JS">
+            ```js
+            const client = new Client();
+            const shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
+            ```
+        </TabItem>
+        <TabItem label="Eris">
+            ```js
+            const client = new Client();
+            const shoukaku = new Shoukaku(new Connectors.Eris(client), Nodes);
+            ```
+        </TabItem>
+        <TabItem label="Oceanic.JS">
+            ```js
+            const client = new Client();
+            const shoukaku = new Shoukaku(new Connectors.OceanicJS(client), Nodes);
+            ```
+        </TabItem>
+        <TabItem label="Seyfert">
+            ```js
+            const client = new Client();
+            const shoukaku = new Shoukaku(new Connectors.Seyfert(client), Nodes);
+            ```
+        </TabItem>
+    </Tabs>
 
-       ```js
-       client.on('ready', () => {
-           client.shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
-       });
-       ```
-     </Aside>
+    <Aside type="danger" title="Do not ever do this!">
+        Shoukaku will never initialized if you don't start her before you call `client.login()`
+        ```js
+        client.on('ready', () => {
+            client.shoukaku = new Shoukaku(new Connectors.DiscordJS(client), Nodes);
+        });
+        ```
+    </Aside>
+
+5. Handle error events
+
+    Always handle "error" events or your program may crash due to uncaught error
+    ```js
+    shoukaku.on("error", (_, error) => console.error(error));
+    ```
+
+6. Login to Discord
+
+    ```js
+    client.login("token");
+    ```
+
+    <Aside type="tip">
+    If you want shoukaku to be available on client, then bind it to it
+    ```js
+    client.shoukaku = shoukaku;
+    ```
+    </Aside>         
+
 </Steps>
 
 ## Other Resources
 
-* [Lavalink Docs](https://lavalink.dev)
-* Example implementation using Discord.JS: [Kongou](https://github.com/Deivu/Kongou)
-* Get support on the [Discord server](https://discord.gg/FVqbtGu)
+- [Lavalink Docs](https://lavalink.dev)
+- Example implementation using Discord.JS: [Kongou](https://github.com/Deivu/Kongou)
+- Get support on the [Discord server](https://discord.gg/FVqbtGu)
