--- a/src/content/docs/4.0.1/guides/6-updating-from-v3.mdx
+++ b/src/content/docs/4.0.1/guides/6-updating-from-v3.mdx
@@ -1,6 +1,7 @@
 ---
 title: Updating from v3 to v4
 description: Changes in your code when updating from v3.
+next: false
 slug: 4.0.1/guides/6-updating-from-v3
 ---
 There are some major changes in Shoukaku v4. Here is some major changes that need to be made to your code.
