--- a/src/content/docs/guides/3-common.mdx
+++ b/src/content/docs/guides/3-common.mdx
@@ -9,28 +9,28 @@ import { Steps } from '@astrojs/starlight/components';
 
 <Steps>
 1. Tell Lavalink to join a Discord voice channel.
-    
     ```js
     const player = await shoukaku.joinVoiceChannel({
-    guildId: "your_guild_id",
-    channelId: "your_channel_id",
-    shardId: 0, // if unsharded it will always be zero (depending on your library implementation)
+        guildId: "your_guild_id",
+        channelId: "your_channel_id",
+        shardId: 0, // if unsharded it will always be zero (depending on your library implementation)
     });
     ```
-2. Search for a track, here we are searching via [SoundCloud](https://soundcloud.com), using the `scsearch:` prefix. The string after the prefix is the search query.
-    
+2. Determine which Node to use.
     ```js
-    const result = await player.node.rest.resolve("scsearch:snowhalation");
+    const node = shoukaku.options.nodeResolver(shoukaku.nodes);
+    ```
+3. Search for a track, here we are searching via [SoundCloud](https://soundcloud.com), using the `scsearch:` prefix. The string after the prefix is the search query.
+    ```js
+    const result = await node.rest.resolve("scsearch:snowhalation");
     if (!result?.tracks.length) return;
     const metadata = result.tracks.shift();
     ```
-3. Tell Lavalink to play the searched track.
-   
+4. Tell Lavalink to play the searched track.
     ```js
     await player.playTrack({ track: metadata.encoded });
     ```
-4. After 30 seconds, tell Lavalink to leave the voice channel.
-    
+5. After 30 seconds, tell Lavalink to leave the voice channel.
     ```js
     setTimeout(() => shoukaku.leaveVoiceChannel(player.guildId), 30000).unref();
     ```
@@ -52,17 +52,17 @@ await player.update({ ...playerOptions });
 When executing any action, an API endpoint is called on a Lavalink node. When there are many nodes passed in the configuration, some logic is used to select the node to perform actions on.
 ```js
 const shoukaku = new Shoukaku(
-  new Connectors.DiscordJS(client),
-  [{ ...yourNodeOptions }],
-  {
-    ...yourShoukakuOptions,
-    nodeResolver: (nodes, connection) => getYourIdealNode(nodes, connection),
-  }
+    new Connectors.DiscordJS(client),
+    [{ ...yourNodeOptions }],
+    {
+      ...yourShoukakuOptions,
+      nodeResolver: (nodes, connection) => getYourIdealNode(nodes, connection),
+    }
 );
 
 const player = await shoukaku.joinVoiceChannel({
-  guildId: "your_guild_id",
-  channelId: "your_channel_id",
-  shardId: 0,
+    guildId: "your_guild_id",
+    channelId: "your_channel_id",
+    shardId: 0,
 });
 ```
