chore: mention typedoc api reference ui as well

--- a/src/content/docs/guides/1-getting-started.mdx
+++ b/src/content/docs/guides/1-getting-started.mdx
@@ -108,3 +108,5 @@ Shoukaku is a stable, powerful and updated wrapper around [Lavalink](https://lav
 - [Lavalink Docs](https://lavalink.dev)
 - Example implementation using Discord.JS: [Kongou](https://github.com/Deivu/Kongou)
 - Get support on the [Discord server](https://discord.gg/FVqbtGu)
+- [API Reference (TypeDoc)](https://shoukaku.shipgirl.moe)
+- [API Reference (Starlight)](/api/classes/shoukaku)
