chore: add note about other runtimes

--- a/src/content/docs/guides/1-getting-started.mdx
+++ b/src/content/docs/guides/1-getting-started.mdx
@@ -6,6 +6,11 @@ description: Get started with Shoukaku.
 import { PackageManagers } from "starlight-package-managers";
 import { Tabs, TabItem, Steps, Aside } from '@astrojs/starlight/components';
 
+<Aside type="tip">
+Shoukaku runs on Node versions above `18.0.0` and NPM versions above `7.0.0`.
+Currently, Shoukaku is not tested or verified to run on the Deno runtime or the Bun runtime.
+</Aside>  
+
 Shoukaku is a stable, powerful and updated wrapper around [Lavalink](https://lavalink.dev/). It is Discord library agnostic, and can add support for new Discord libraries using connectors.
 
 ## Set up Shoukaku
