docs: change title of index pages

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Shoukaku Docs
+title: Shoukaku
 description:  A stable, powerful and updated wrapper around Lavalink.
 hero:
   tagline:  A stable, powerful and updated wrapper around Lavalink.
