chore: update for new lavalink format

--- a/src/content/docs/4.1.0/guides/3-common.mdx
+++ b/src/content/docs/4.1.0/guides/3-common.mdx
@@ -29,7 +29,7 @@ import { Steps } from '@astrojs/starlight/components';
      ```
   4. Tell Lavalink to play the searched track.
      ```js
-     await player.playTrack({ track: metadata.encoded });
+     await player.playTrack({ track: { encoded: metadata.encoded } });
      ```
   5. After 30 seconds, tell Lavalink to leave the voice channel.
      ```js
@@ -42,7 +42,7 @@ import { Steps } from '@astrojs/starlight/components';
 Here we are changing the volume, you can do [other stuff](/4.1.0/api/classes/player#methods) as well.
 
 ```js
-await player.playTrack({ track: metadata.encoded });
+await player.playTrack({ track: { encoded: metadata.encoded } });
 await player.setGlobalVolume(50);
 ```
 
