--- a/src/content/docs/4.1.0/guides/6-updating-from-v3.mdx
+++ b/src/content/docs/4.1.0/guides/6-updating-from-v3.mdx
@@ -45,7 +45,7 @@ Play the track using the encoded metadata.
 
 ```diff
 -player.playTrack({ track: metadata.track })
-+await player.playTrack({ track: metadata.encoded });
++await player.playTrack({ track: { encoded: metadata.encoded } });
 ```
 
 ### Leaving voice channels
