--- a/src/content/docs/guides/6-updating-from-v3.mdx
+++ b/src/content/docs/guides/6-updating-from-v3.mdx
@@ -35,7 +35,7 @@ You can also use the player.node property after connecting to a voice channel to
 Play the track using the encoded metadata.
 ```diff
 -player.playTrack({ track: metadata.track })
-+await player.playTrack({ track: metadata.encoded });
++await player.playTrack({ track: { encoded: metadata.encoded } });
 ```
 
 ### Leaving voice channels
